--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, World!</title>
+    <title>Dreeeva</title>
 </head>
 <body>
-    <h1>Dreeeva</h1>
+    <h1>Dreeeva - We will Drive soon</h1>
 </body>
 </html>
+
 
